test/files/neg/unchecked-impossible.check
unchecked-impossible.scala:5: warning: fruitless type test: a value of type T2[Int,Int] cannot also be a Seq[A]
    case Seq(x) =>
            ^
error: No warnings can be incurred under -Xfatal-warnings.
one warning found
one error found
